# Huh-Really-

./: .env.example  .gitignore  BUILD_PLAN_CORRELATIONS.md  README.md  app.py  pyproject.toml
cases/: parkinsons_golf.yaml  parkinsons_golf_fixture.csv
cases/parkinsons_golf_outputs/: causation.json  literature.json  study_design.json
scripts/: etl.py
src/: config.py  db.py  pipeline.py
src/agents/: causation.py  correlation.py  literature.py  study_design.py
src/data/: cdc_places.py  cdc_svi.py  cdc_wonder.py  census_acs.py  census_cbp.py  cms_chronic.py  county_health_rankings.py  epa_aqs.py  epa_ejscreen.py  epa_pesticides.py  epa_sdwis.py  epa_superfund.py  epa_tri.py  openfda_faers.py  osm_features.py  pubmed.py  registry.py  semantic_scholar.py  usda_cropscape.py  usgs_nlcd.py  usgs_nwis.py  usgs_pesticide_use.py
tests/: conftest.py  test_causation.py  test_correlation.py  test_literature.py  test_study_design.py
