[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unlikely-correlations"
version = "0.1.0"
description = "Multi-agent research platform for detecting hidden associations between health outcomes and environmental factors"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.25.0",
    "streamlit>=1.35.0",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
    "requests>=2.32.0",
    "folium>=0.16.0",
    "plotly>=5.22.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pysal>=24.1",
    "esda>=2.6.0",
    "libpysal>=4.11.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "pyyaml>=6.0.0",
    "duckdb>=0.10.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
    "httpx>=0.27.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
unlikely = "src.pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
